; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_analyze.c_LCS_asString.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_analyze.c_LCS_asString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"FOR KEY SHARE\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"FOR SHARE\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"FOR NO KEY UPDATE\00", align 1
@.str.3 = private unnamed_addr constant [11 x i8] c"FOR UPDATE\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"FOR some\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @LCS_asString(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %11 [
    i32 128, label %5
    i32 132, label %7
    i32 130, label %8
    i32 131, label %9
    i32 129, label %10
  ]

5:                                                ; preds = %1
  %6 = call i32 @Assert(i32 0)
  br label %11

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %12

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %12

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %12

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %12

11:                                               ; preds = %1, %5
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %12

12:                                               ; preds = %11, %10, %9, %8, %7
  %13 = load i8*, i8** %2, align 8
  ret i8* %13
}

declare dso_local i32 @Assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
